--- a/settings.gradle
+++ b/settings.gradle
@@ -18,3 +18,6 @@ include ':i-characters'
 include ':cf-network'
 include ':cf-data'
 include ':i-episode'
+include ':f-detail-character'
+include ':cf-ui'
+include ':cf-core'
